--- a/clingy/package.json
+++ b/clingy/package.json
@@ -1,5 +1,6 @@
 {
   "name": "clingy",
+  "homepage": "https://viaduct12.github.io/clingy-react/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,7 +11,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -30,6 +31,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "homepage": "https://viaduct12.github.io/clingy-react/"
+  }
 }
