--- a/clingy/package.json
+++ b/clingy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "clingy",
-  "homepage": "https://viaduct12.github.io/clingy-react/",
+  "homepage": "https://viaduct12.github.io/clingy-react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
